--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -1,5 +1,50 @@
+.v-datalist-container {
+  min-height: 34.25rem;
+  height: 80vh;
+  width: 100%;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  background-color: white;
+}
+
 .main {
-    width: 85%;
-    height: 85%;
-    background-color: white;
+  width: 85%;
+  height: 100%;
+  background-color: white;
+  padding-top: 180px;
+}
+
+/*#main{
+	margin-top: 20px;
+}*/
+
+#chartContainer{
+	height: 50vh;
+	width: 100% ;
+}
+
+.apparatus {
+	order: 1;
+}
+
+.simulation {
+	order: 2;
+}
+
+.observations {
+	order: 3;
+}
+
+@media screen and (max-width: 1023px) {
+	.apparatus {
+		order: 1;
+	}
+
+	.simulation {
+		order: 3;
+	}
+
+	.observations {
+		order: 2;
+	}
 }
